Updated many many classes, but still not ready